# open-llm-on-lab

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: generate.yaml
outputs/2023-09-24/17-22-04/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/17-32-27/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/17-36-48/.hydra/: hydra.yaml  overrides.yaml
outputs/2023-09-24/17-49-12/.hydra/: config.yaml  hydra.yaml
outputs/2023-09-24/17-50-25/.hydra/: config.yaml  hydra.yaml
outputs/2023-09-24/17-54-30/.hydra/: hydra.yaml
outputs/2023-09-24/17-55-18/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/17-56-38/.hydra/: hydra.yaml
outputs/2023-09-24/17-56-49/.hydra/: hydra.yaml
outputs/2023-09-24/17-57-28/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/17-58-18/.hydra/: config.yaml  hydra.yaml
outputs/2023-09-24/17-59-31/.hydra/: hydra.yaml
outputs/2023-09-24/18-01-10/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/18-04-00/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2023-09-24/18-05-13/.hydra/: hydra.yaml
outputs/2023-09-24/18-05-55/.hydra/: hydra.yaml
outputs/2023-09-24/18-06-39/.hydra/: hydra.yaml
outputs/2023-09-24/18-08-55/.hydra/: hydra.yaml
outputs/2023-09-24/18-11-23/.hydra/: config.yaml  hydra.yaml
outputs/2023-09-24/18-25-25/.hydra/: hydra.yaml
outputs/2023-09-24/18-26-39/.hydra/: config.yaml  hydra.yaml
src/: benchmark_generate.py  dataset.py  get_gpu_info.py
(+40 files in other folders)
